infra/k8s/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appointment-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: appointment-service

  template:
    metadata:
      labels:
        app: appointment-service

    spec:
      containers:

      - name: appointment-service

        image: smarthealth-appointment-service:latest

        imagePullPolicy: IfNotPresent

        ports:
          - containerPort: 8080


        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi


        livenessProbe:

          httpGet:
            path: /health/live
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5


        readinessProbe:

          httpGet:
            path: /health/ready
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5
