infra/k8s/doctor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: backend-doctor-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
