infra/k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notification-service

  template:
    metadata:
      labels:
        app: notification-service

    spec:
      containers:

      - name: notification-service

        image: smarthealth-notification-service:latest

        imagePullPolicy: IfNotPresent

        ports:
          - containerPort: 8080

        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi


        livenessProbe:

          httpGet:
            path: /health/live
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5


        readinessProbe:

          httpGet:
            path: /health/ready
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5
