infra/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:

      - name: postgres

        image: postgres:15

        ports:
          - containerPort: 5432


        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
          
          - name: postgres-init
            mountPath: /docker-entrypoint-initdb.d


      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

        - name: postgres-init
          configMap:
            name: postgres-init
