infra/k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:

      - name: rabbitmq

        image: rabbitmq:3-management

        ports:

        - containerPort: 5672
        - containerPort: 15672


        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi


        volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq


      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
