infra/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:

      - name: redis

        image: redis:7

        args:
          - "--requirepass"
          - "$(REDIS_PASSWORD)"

        ports:
          - containerPort: 6379

        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi
