infra/k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: NodePort
  selector:
    app: admin-service
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30003
