infra/k8s/ai-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-service

spec:
  type: NodePort

  selector:
    app: ai-service

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30011
