infra/k8s/appointment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: appointment-service

spec:

  type: NodePort

  selector:
    app: appointment-service

  ports:

  - port: 80
    targetPort: 8080
    nodePort: 30007
