infra/k8s/doctor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  type: NodePort
  selector:
    app: doctor-service
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
