infra/k8s/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: NodePort
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30004
