infra/k8s/payment-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payment-service

spec:
  type: NodePort

  selector:
    app: payment-service

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30008
