infra/k8s/telemedicine-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: telemedicine-service

spec:
  type: NodePort

  selector:
    app: telemedicine-service

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30009
