infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smarthealth-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, x-api-key"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m

spec:
  ingressClassName: nginx

  rules:
    - host: localhost
      http:
        paths:
          - path: /doctors(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: doctor-service
                port:
                  number: 80

          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /patient(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: patient-service
                port:
                  number: 80

          - path: /admin(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin-service
                port:
                  number: 80

          - path: /appointments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointment-service
                port:
                  number: 80

          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 80
